--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
-					<a href="#" class="icon fa-github"><span class="label">GitHub</span></a>
+					&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
 					<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 				</div>
 			</footer>
