--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
 							<label for="medMail">Inserisci la tua email:</label>
 							<input type="email" id="medMail" placeholder="inserisci email" name="medMail">
 							<br>
-							<button type="submit" >Iscriviti</button>
+							<ul class="actions">
+								<li><input type="submit" value="Invia" class="special"/></li>
+							</ul>
 						  </form>
 						<ul class="actions">
 					</div>
