--- a/info1.html
+++ b/info1.html
@@ -47,7 +47,7 @@
 			<div class="copyright">
 				&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 				<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
-				<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+				<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://unsplash.com">Unsplash</a>. All rights reserved.
 			</div>
 		</footer>
 
@@ -57,6 +57,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/customLogic.js"></script>
 
 	</body>
 </html>
