--- a/index.html
+++ b/index.html
@@ -1,249 +1,66 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		<title>PsiMed</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	</head>
-	<body>
+<!doctype html>
+<html class="staticrypt-html">
+<head>
+    <title>Sinapsi</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="logo"><strong>PsiMed</strong>app</a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
-			</header>
+    <!-- do not cache this page -->
+    <meta http-equiv="cache-control" content="max-age=0"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="expires" content="0"/>
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
+    <meta http-equiv="pragma" content="no-cache"/>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="info1.html">Contenuto Informativo 1</a></li>
-					<li><a href="info2.html">Contenuto Informativo 2</a></li>
-				</ul>
-			</nav>
+</head>
 
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<h1>PsiMed è l'applicazione che mette in contatto psicologi e medici di base per fornire al paziente una cura completa ed efficiente</h1>
-					<ul class="actions">
-						<li><a href="#one" class="button alt scrolly big">Continua</a></li>
-					</ul>
-				</div>
-			</section>
+<body>
 
-		<!-- One -->
-			<article id="one" class="post style1">
-				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="75% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a>Modulo Paziente</a></h2>
-							<p class="info">Il paziente intende iniziare un percorso / Il medico ritiene opportuno un consulto</p>
-						</header>
-						<form onsubmit="composeEmail(false); return false;">
-								<div class="row uniform 50%">
-									<div class="12u$">
-										<label for="medIdText">Medico curante:</label>
-										<input type="text" name="medIdText" id="medIdText" value="" placeholder="es. Dott Mario Rossi" />
-									</div>
-									<div class="6u 12u$(xsmall)">
-										<label for="pazName"> .</label>
-										<input type="text" name="pazName" id="pazName" value="" placeholder="Nome" />
-									</div>
-									<div class="6u 12u$(xsmall)">
-										<label for="pazSurname">Paziente:</label>
-										<input type="text" name="pazSurname" id="pazSurname" value="" placeholder="Cognome" />
-									</div>
-									<div class="12u$">
-										<input type="email" name="pazEmail" id="pazEmail" value="" placeholder="Indirizzo Email" />
-									</div>
-									<div class="6u 12u$(xsmall)"></div>
-									<div class="3u 12u$(xsmall)">
-										<input type="radio" id="pazIta" name="pazItalian" value="true" checked>
-										<label for="pazIta">Italiano</label>
-									</div>
-									<div class="3u 12u$(xsmall)">
-										<input type="radio" id="pazNotIta" name="pazItalian" value="false">
-										<label for="pazNotIta">Straniero</label>
-									</div>
-									<div class="9u 12u$(xsmall)">
-										<input type="checkbox" id="personalData" name="personalData" onchange="document.getElementById('submitForm').disabled = !this.checked;">
-										<label for="personalData" style="font-size:75%;">Il paziente ha acconsentito al trattamento dei dati personali firmando il consenso informato. 
-											<a onclick="printConsent();">STAMPA MODULO</a>
-										</label>
-									</div>
-									<div class="3u 12u$(xsmall)">
-										<ul class="actions">
-											<li><input type="submit" value="Invia" class="special" id="submitForm" disabled/></li>
-										</ul>
-									</div>
-								</div>
-						</form>
-						<p id="printConsent" hidden></p>
-					</div>
-				</div>
-			</article>
+    <!-- Header -->
+        <header id="header">
+            <a class="logo">Sina<strong>psi</strong></a>
+        </header>
 
-		<!-- Counseling -->
-			<article id="counseling" class="post invert style1 alt">
-				<div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="10% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a>Sei un medico e hai bisogno di counseling psicologico?</a></h2>
-							<p class="info">Anche i medici possono usufruire del nostro servizio</p>
-						</header>
-						<p>Da soli a seguire decine di pazienti, sulle spalle la responsabilità della salute e della vita dei malati. Anche un medico di famiglia può avere bisogno di un counseling psicologico. Contattaci, spiegaci la tua situazione ed inizia la terapia.</p>
-						<ul class="actions">
-							<li><a href="#contatti" class="button alt">Contattaci</a></li>
-						</ul>
-					</div>
-				</div>
-			</article>
+    <!-- Login -->
+    <!-- credits: https://robinmoisson.github.io/staticrypt/ -->
+        <section id="banner">
+            <div class="inner">
+                <h1>Sinapsi è l'applicazione che mette in contatto psicologi e medici di base per fornire al paziente una cura completa ed efficiente</h1>
+                <form class="form-inline" id="staticrypt-form" action="#" method="post">
+                    <input id="staticrypt-password"
+                           type="password"
+                           name="password"
+                           placeholder="Inserisci password"
+                           autofocus/>
+                    <br>
+                    <ul class="actions">
+                        <li><input type="submit" value="CONFERMA" class="staticrypt-decrypt-button special"/></li>
+                    </ul>
+                </form>
+            </div>
+        </section>
 
-		<!-- Info1 -->
-			<article id="info1" class="post style2">
-				<div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a href="info1.html">Contenuto Informativo 1</a></h2>
-							<p class="info">Scritto 3 giorni fa da <a href="#contatti">Andrea Avondo</a></p>
-						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
-						<ul class="actions">
-							<li><a href="info1.html" class="button alt">Continua a leggere</a></li>
-						</ul>
-					</div>
-				</div>
-			</article>
+    <!-- Footer -->    
+        <footer id="footer">
+            <div class="copyright">
+                &copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
+                <a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
+                <br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://www.pexels.com">Pexels</a>. All rights reserved.
+            </div>
+        </footer>
 
-		<!-- Info2 -->
-			<article id="info2" class="post invert style2 alt">
-				<div class="image">
-					<img src="images/pic14.jpg" alt="" data-position="60% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a href="info2.html">Contenuto Informativo 2</a></h2>
-							<p class="info">Scritto 10 giorni fa da <a href="#contatti">Giulia Monardo</a></p>
-						</header>
-						<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel.</p>
-						<ul class="actions">
-							<li><a href="info2.html" class="button alt">Continua a leggere</a></li>
-						</ul>
-					</div>
-				</div>
-			</article>
-
-		<!-- Newsletter -->
-			<article id="newsletter" class="post style3">
-				<div class="image">
-					<img src="images/pic13.jpg" alt="" data-position="5% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a href="generic.html">Newsletter</a></h2>
-							<p class="info">Iscriviti alla nostra newsletter per saperne di più</p>
-						</header>
-						<p>Hai trovato interessanti i nostri contenuti illustrativi? Vuoi approfondire questi e altri argomenti e scoprire di più? Iscriviti alla nostra newsletter per rimanere aggiornato.</p>
-						<form class="form-inline" onsubmit="composeEmail(true); return false;">
-							<label for="medMail">Inserisci la tua email:</label>
-							<input type="email" id="medMail" placeholder="inserisci email" name="medMail">
-							<br>
-							<ul class="actions">
-								<li><input type="submit" value="Invia" class="special"/></li>
-							</ul>
-						  </form>
-						<ul class="actions">
-					</div>
-				</div>
-			</article>
-
-		<!-- Six -->
-			<article id="contatti" class="post invert style3 alt">
-				<div class="image">
-					<img src="images/pic12.jpg" alt="" data-position="80% center" />
-				</div>
-				<div class="content">
-					<div class="inner">
-						<header>
-							<h2><a href="generic.html">Contatti</a></h2>
-							<p class="info">I nostri contatti</p>
-						</header>
-						<div class="row uniform 50%">
-								<div class="6u 12u$(xsmall)">
-										<div class="card" style="background-color: rgba(0,0,0,0.2)">
-												<img src="images/pic13.jpg" alt="Avatar" style="width:100%; border-radius: 5px 5px 0 0;">
-												<div class="cont">
-													<h4><b>Dott. Andrea Avondo</b></h4>
-													<p>Psicologo</p>
-													<ul>
-															<li>+39 333 12 34 567</li>
-															<li>mario.rossi@gmail.com</li>
-													</ul>
-													<ul class="icons">
-															<li><a href="#" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
-															<li><a href="#" class="icon fa-instagram"><span class="label">Facebook</span></a></li>
-													</ul>
-												</div>
-										</div>
-								</div>
-								<div class="6u 12u$(xsmall)">
-										<div class="card" style="background-color: rgba(0,0,0,0.2)">
-												<img src="images/pic12.jpg" alt="Avatar" style="width:100%; border-radius: 5px 5px 0 0;">
-												<div class="cont">
-													<h4><b>Dott.ssa Giulia Monardo</b></h4>
-													<p>Psicologo</p>
-													<ul>
-															<li>+39 333 12 34 567</li>
-															<li>mario.rossi@gmail.com</li>
-													</ul>
-													<ul class="icons">
-															<li><a href="#" class="icon fa-facebook"><span class="label">Twitter</span></a></li>
-															<li><a href="#" class="icon fa-instagram"><span class="label">Facebook</span></a></li>
-													</ul>
-												</div>
-										</div>
-								</div>
-						</div>
-					</div>
-					<div class="postnav">
-						<a href="#" class="scrolly prev"><span class="icon fa-chevron-up"></span></a>
-					</div>
-				</div>
-			</article>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-					&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
-					<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
-					<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://unsplash.com">Unsplash</a>. All rights reserved.
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/print.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/customLogic.js"></script>
-
-	</body>
+    <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/skel.min.js"></script>
+        <script src="assets/js/print.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+        <script src="assets/js/crypto-js.js"></script>
+        <script src="assets/js/encryptedContent.js"></script>
+        <script src="assets/js/decrypto.js"></script>
+        <script src="assets/js/customLogic.js"></script>
+</body>
 </html>
