--- a/info1.html
+++ b/info1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Contenuto Informativo 1 - PsiMed</title>
+		<title>Contenuto Informativo 1 - Sinapsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,7 +10,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>PsiMed</strong>app</a>
+				<a href="index.html" class="logo">Sina<strong>psi</strong></a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -29,11 +29,11 @@
 			<section id="main">
 				<div class="inner">
 					<div class="image fit">
-						<img src="images/pic11.jpg" alt="" />
+						<img src="images/cont-info-1.jpeg" alt="" />
 					</div>
 					<header>
 						<h1>Contenuto Informativo 1</h1>
-						<p class="info">Scritto 3 giorni fa da <a href="#contatti">Andrea Avondo</a></p>
+						<p class="info">Scritto 3 giorni fa da <a href="#contatti">A</a></p>
 					</header>
 					<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel. Nunc ullamcorper ipsum at diam congue luctus. Sed nec sapien blandit, tempor quam non, consectetur turpis. Morbi libero lorem, hendrerit sed metus non, malesuada placerat nulla. Sed nisi turpis, rutrum eget rutrum euismod, consequat ullamcorper eros. Quisque tortor nunc, sodales convallis nisl non, bibendum tincidunt tortor. Etiam pellentesque tincidunt nunc, a dignissim dolor tempus et. Pellentesque in urna ligula. Fusce ligula velit, mollis ac diam non, rutrum fringilla turpis.</p>
 					<p>Aliquam consequat, nulla sed sodales convallis, sem odio porttitor justo, non volutpat augue libero eget neque. Nunc consequat arcu nec tortor venenatis tempus a placerat mauris. Nam ultricies consequat ligula, et placerat arcu ultrices a. Sed placerat ipsum lacus, at imperdiet nisi imperdiet at. Vivamus diam dui, accumsan quis lacinia ac, sollicitudin feugiat metus. Vestibulum a velit ac eros blandit molestie non eget erat. Nunc eget odio erat. Nulla sit amet enim pharetra tortor molestie tempor nec sed turpis. Cras eget odio at erat dictum tincidunt. Sed facilisis convallis mi, eget tempor nunc pellentesque pulvinar. Etiam volutpat luctus tristique.</p>
@@ -47,7 +47,7 @@
 			<div class="copyright">
 				&copy; <a href="https://www.linkedin.com/in/tbuonocore">TOMMASO BUONOCORE</a>&nbsp;-&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/tbuonocore" class="icon fa-linkedin"> <span class="label">LinkedIn</span></a>&nbsp;&nbsp;
 				<a href="https://github.com/detsutut/psimed" class="icon fa-github"><span class="label">GitHub</span></a>
-				<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://unsplash.com">Unsplash</a>. All rights reserved.
+				<br> Design: <a href="https://templated.co">Templated</a>. Images: <a href="https://www.pexels.com">Pexels</a>. All rights reserved.
 			</div>
 		</footer>
 
