after login ui change

--- a/index-public-info.html
+++ b/index-public-info.html
@@ -29,7 +29,8 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Benvenuto in Sina<strong>psi</strong>!</h1>
+					<h1>Ogni contatto nasce da un incontro, ogni incontro genera una connessione.</h1>
+					<h1>Benvenuto in Sinapsi!</h1>
 					<ul class="actions">
 						<li><a href="#one" class="button alt scrolly big">Continua</a></li>
 					</ul>
