--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="info1.html">Perchè usare Sinapsi</a></li>
+					<li><a onclick="alert('Funzione non disponibile in demo');">Perchè usare Sinapsi</a></li>
 				</ul>
 			</nav>
 
@@ -47,14 +47,14 @@
 							<h2><a>Modulo Invio Paziente</a></h2>
 							<p class="info">Se ritieni opportuno un consulto o se il paziente intende iniziare un percorso psicologico, compila il form sottostante</p>
 						</header>
-						<form onsubmit="composeEmail(false); return false;">
+						<form onsubmit="alert('Funzione non disponibile in demo'); return false;">
 								<div class="row uniform 50%">
 									<div class="12u$">
 										<label for="medIdText">Medico curante:</label>
 										<input type="text" name="medIdText" id="medIdText" value="" placeholder="es. Dott Mario Rossi" />
 									</div>
 									<div class="6u 12u$(xsmall)">
-										<label for="pazName"> .</label>
+										<label for="pazName" style="color: rgb(255,255,255,0.0);"> .</label>
 										<input type="text" name="pazName" id="pazName" value="" placeholder="Nome" />
 									</div>
 									<div class="6u 12u$(xsmall)">
@@ -76,7 +76,7 @@
 									<div class="9u 12u$(xsmall)">
 										<input type="checkbox" id="personalData" name="personalData" onchange="document.getElementById('submitForm').disabled = !this.checked;">
 										<label for="personalData" style="font-size:75%;">Il paziente acconsente al trattamento dei dati personali come indicato all’interno dell’
-											<a onclick="modal_pz.style.display = 'block';">informativa</a>.
+											<a onclick="alert('Funzione non disponibile in demo');">informativa</a>.
 										</label>
 									</div>
 									<div class="3u 12u$(xsmall)">
@@ -117,7 +117,7 @@
 			<div class="content">
 				<div class="inner">
 					<header>
-						<h2><a href="info1.html">Perchè Usare Sinapsi</a></h2>
+						<h2><a onclick="alert('Funzione non disponibile in demo');">Perchè Usare Sinapsi</a></h2>
 						<p class="info">Scritto da <a href="#contatti">Andrea Avondo</a> e <a href="#contatti">Giulia Monardo</a> </p>
 					</header>
 					<p>In questo breve articolo vogliamo condividere con te i principali vantaggi che puoi trarre dall’utilizzo di Sinapsi.<br>
@@ -125,7 +125,7 @@
 						È stato dimostrato come gran parte del tempo del medico di base sia dedicato ad affrontare i problemi emotivi dei propri assistiti, spesso espressi sotto forma di sofferenza somatica o di disagio relazionale.
 					</p>
 					<ul class="actions">
-						<li><a href="info1.html" class="button alt">Continua a leggere</a></li>
+						<li><a class="button alt" onclick="alert('Funzione non disponibile in demo');">Continua a leggere</a></li>
 					</ul>
 				</div>
 			</div>
@@ -143,7 +143,7 @@
 							<p class="info">Iscriviti alla nostra newsletter per maggiori contenuti</p>
 						</header>
 						<p>Hai trovato interessanti in nostri contenuti illustrativi? Iscriviti alla newsletter per ricevere ulteriori approfondimenti psicologici creati ad hoc per il MMG e rimanere sempre aggiornato.</p>
-						<form class="form-inline" onsubmit="composeEmail(true); return false;">
+						<form class="form-inline" onsubmit="alert('Funzione non disponibile in demo'); return false;">
 							<div class="row uniform 50%">
 								<div class="12u$">	
 									<label for="medMail">Inserisci la tua email:</label>
@@ -151,7 +151,7 @@
 								</div>
 								<div class="9u 12u$(xsmall)">
 									<input type="checkbox" id="privacyPolicy" name="privacyPolicy" onchange="document.getElementById('submitForm2').disabled = !this.checked;">
-									<label for="privacyPolicy" style="font-size:75%;">Letta la <a onclick="modal_med.style.display = 'block';">Privacy Policy</a>, acconsento a ricevere newsletter.
+									<label for="privacyPolicy" style="font-size:75%;">Letta la <a onclick="alert('Funzione non disponibile in demo');">Privacy Policy</a>, acconsento a ricevere newsletter.
 									</label>
 								</div>
 								<div class="3u 12u$(xsmall)">
