--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             // Get the <span> element that closes the modal
             var span0 = document.getElementsByClassName("close")[0];
             // When the user clicks on <span> (x), close the modal
-            span0.onclick = function() {modal_pz.style.display = "none";}
+            span0.onclick = function() {modal_privacy.style.display = "none";}
             // When the user clicks anywhere outside of the modal, close it
             window.onclick = function(event) {if (event.target == modal_privacy) modal_privacy.style.display = "none";}
         </script>
