--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
     <meta http-equiv="pragma" content="no-cache"/>
-
 </head>
 
 <body>
@@ -141,6 +140,13 @@
         <script src="assets/js/encryptedContent.js"></script>
         <script src="assets/js/decrypto.js"></script>
         <script>
+			// **** REGISTER SERVICE WORKER **** //
+			if ('serviceWorker' in navigator){
+				window.addEventListener('load', function() {
+					navigator.serviceWorker.register('assets/js/sw.js')
+					.then(function() { console.log("Service Worker Registered, Cheers to PWA Fire!"); });
+				});
+			}
             // **** MODALS **** //
             var modal_privacy = document.getElementById("infModal");
             // Get the <span> element that closes the modal
