--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			if ('serviceWorker' in navigator){
 				window.addEventListener('load', function() {
 					navigator.serviceWorker.register('assets/js/sw.js')
-					.then(function() { console.log("Service Worker Registered, Cheers to PWA Fire!"); });
+					.then(function() { console.log("Service Worker Registered"); });
 				});
 			}
             // **** MODALS **** //
