--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			// **** REGISTER SERVICE WORKER **** //
 			if ('serviceWorker' in navigator){
 				window.addEventListener('load', function() {
-					navigator.serviceWorker.register('assets/js/sw.js')
+					navigator.serviceWorker.register('sw.js')
 					.then(function() { console.log("Service Worker Registered"); });
 				});
 			}
