--- a/info1.html
+++ b/info1.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="manifest" href="manifest.json" />
 	</head>
 	<body style="background-image: url('images/perche-sinapsi-full.jpg');background-size: cover;">
 
@@ -96,6 +97,14 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/customLogic.js"></script>
-
+			<script>
+			// **** REGISTER SERVICE WORKER **** //
+			if ('serviceWorker' in navigator){
+				window.addEventListener('load', function() {
+					navigator.serviceWorker.register('sw.js')
+					.then(function() { console.log("Service Worker Registered"); });
+				});
+			}
+			</script>
 	</body>
 </html>
