demo PWA update

--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,7 @@
 		<title>Sinapsi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="manifest.json" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
@@ -251,6 +252,13 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script>
+			// **** REGISTER SERVICE WORKER **** //
+			if ('serviceWorker' in navigator){
+				window.addEventListener('load', function() {
+					navigator.serviceWorker.register('sw.js')
+					.then(function() { console.log("Service Worker Registered"); });
+				});
+			}
 			// **** SNACKBAR **** //
 			function showSnackbar () {
 				var x = document.getElementById("snackbar");
