--- a/demo.html
+++ b/demo.html
@@ -127,7 +127,7 @@
 						È stato dimostrato come gran parte del tempo del medico di base sia dedicato ad affrontare i problemi emotivi dei propri assistiti, spesso espressi sotto forma di sofferenza somatica o di disagio relazionale.
 					</p>
 					<ul class="actions">
-						<li><a class="button alt" onclick="showSnackbar();">Continua a leggere</a></li>
+						<li><a class="button alt" onclick="window.location.href('info1.html');">Continua a leggere</a></li>
 					</ul>
 				</div>
 			</div>
